# fpcpp

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.MD  LICENSE  README.md
include/: fp_common.h  fp_composition.h  fp_composition_compound.h  fp_composition_compound_utils.h  fp_composition_utils.h  fp_curry.h  fp_curry_defines.h  fp_defines.h  fp_io.h  fp_maybe.h  fp_prelude.h  fp_prelude_infix.h  fp_prelude_lazy.h  fp_prelude_lists.h  fp_prelude_math.h  fp_prelude_objects.h  fp_prelude_strings.h  fp_template_utils.h  fpcpp.h
samples/: CMakeLists.txt  benchmark.cpp  benchmark_common.h  benchmarks.cpp  composition.cpp  compositionCompound.cpp  compositionString.cpp  composition_Benchmark.cpp  euler.cpp  flocking.cpp  fun.cpp  gameOfLife.cpp  game_of_life.cpp  playlist.cpp  simple.cpp  sudoku.cpp  timer.h
tests/: CMakeLists.txt  common.h  fpTest.cpp  fp_test.cpp  simple.cpp
