add_executable(fpFun                  fun.cpp)
add_executable(fpGameOfLife           game_of_life.cpp)
add_executable(fpFlocking             flocking.cpp)
add_executable(fpComposition          composition.cpp)
add_executable(fpCompositionBenchmark composition_benchmark.cpp)
add_executable(fpBenchmarks           benchmarks.cpp)
add_executable(fpPlaylist             playlist.cpp)
