add_executable(fpFun                  fun.cpp)
add_executable(fpGameOfLife           game_of_life.cpp)
add_executable(fpFlocking             flocking.cpp)
add_executable(fpComposition          composition.cpp)
add_executable(fpBenchmarks           benchmarks.cpp)
add_executable(fpPlaylist             playlist.cpp)
add_executable(fpSimple               simple.cpp)
add_executable(fpEuler                euler.cpp)
add_executable(fpSudoku               sudoku.cpp)
